@@ -20,6 +20,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Remove special handling for "default", it was broken anyway.
     - Switch back sparc kernel handling in tftpboot.sh to the old value.
     - Add support for MANIFEST files.
+    - Fix genromfs invocation, found by Thomas Poindessous.
   * Thomas Poindessous
     - Remove redundant kbd-chooser from netboot pkg-list.
     - Add discover, discover-data to sparc netboot image. Closes: #227853
